[metadata]
name = tpDcc-libs-qt
description = Collection of Python utilities modules to work with PySide/PyQt and DCCs
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/tpDcc/tpDcc-libs-qt

[options]
zip_safe = False
include_package_data = true
packages=find:
install_requires =
    Qt.py
    metayaml
    singledispatch==3.4.0.3;python_version < '3.4'
    tpDcc-core
    tpDcc-libs-python

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1

[versioneer]
VCS = git
style = pep440
versionfile_source = tpDcc/libs/qt/_version.py
versionfile_build =
tag_prefix =
parentdir_prefix =